--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -293,22 +293,22 @@
   topics: ["data-structures", "scientific-computing"]
 
 - name: tch
-  topics: ["neural-networks", "bindings"]
+  topics: ["neural-networks"]
 
 - name: tokenizers
   topics: ["data-preprocessing"]
 
 - name: tensorflow
-  topics: ["neural-networks", "bindings"]
+  topics: ["neural-networks"]
 
 - name: timely
   topics: ["data-preprocessing"]
 
 - name: tflite
-  topics: ["neural-networks", "bindings"]
+  topics: ["neural-networks"]
 
 - name: tvm
-  topics: ["neural-networks", "bindings"]
+  topics: ["neural-networks"]
 
 - name: utah
   repository: https://github.com/kernelmachine/utah
