Attempting publish with upload/download artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,3 +117,9 @@ jobs:
 
       - name: Build Site
         run: ${{ env.COBALT_BIN }} build
+
+      - name: Upload built site archive
+        uses: actions/upload-artifact@v2
+        with:
+          name: site-archive
+          path: _site
