--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,9 @@ jobs:
           name: site-archive
 
       - name: _site directory exists
-        uses: dothq/file-or-directory-exists@latest
+        uses: andstor/file-existence-action@v1
         with:
-          input: _site
+          files: _site
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
