adds clarabel.rs optimization package

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -52,6 +52,9 @@
 
 - name: cgmath
   topics: ["scientific-computing"]
+  
+- name: clarabel
+  topics: ["scientific-computing"]
 
 - name: classifier
   topics: ["linear-classifiers"]
