adds clarabel.rs docs site

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -55,7 +55,7 @@
   
 - name: clarabel
   topics: ["scientific-computing"]
-  documentation: https://github.com/oxfordcontrol/ClarabelDocs
+  documentation: https://oxfordcontrol.github.io/ClarabelDocs/
 
 - name: classifier
   topics: ["linear-classifiers"]
