--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -394,8 +394,12 @@
   license: MIT
   topics: ["data-preprocessing"]
 
-
 - repository: https://github.com/outbrain/fwumious_wabbit
   description: "Fast logistic regression and field-aware factorization machines in Rust"
   license: BSD
   topics: ["neural-networks", "linear-classifiers"]
+  
+- repository: https://github.com/webonnx/wonnx
+  description: "Wonnx is a GPU-accelerated ONNX inference run-time written 100% in Rust, ready for the web."
+  license: MIT
+  topics: ["neural-networks", "gpu-computing"]
