Add triton_grow and rstats
Closes #142
Closed #129

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -312,6 +312,9 @@
 - name: rsrl
   topics: ["reinforcement"]
 
+- name: rstats
+  topics: ["scientific-computing"]
+
 - name: rulinalg
   topics: ["scientific-computing"]
 
@@ -383,6 +386,9 @@
   topics: ["neural-networks"]
 
 - name: tract
+  topics: ["neural-networks"]
+
+- name: triton
   topics: ["neural-networks"]
 
 - name: tvm
