--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -388,7 +388,8 @@
 - name: tract
   topics: ["neural-networks"]
 
-- name: triton
+- name: triton_grow
+  repository: https://github.com/BradenEverson/triton
   topics: ["neural-networks"]
 
 - name: tvm
