--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,13 +72,11 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-      -
-        name: Use daily cache of scraper data
+      - name: Use daily cache of scraper data
         uses: actions/cache@v2
         with:
           path: _tmp
           key: scraper-data-cache-${{ steps.date.outputs.date }}
-
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -113,7 +111,7 @@ jobs:
         run: ${{ env.COBALT_BIN }} build
 
       - name: Upload built site archive
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: site-archive
           path: _site
