--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -135,6 +135,9 @@
 - name: densearray
   topics: ["data-structures"]
 
+- name: delta
+  topics: ["neural-networks"]
+
 - name: dfdx
   topics:
     [
